src/objects/Project__c.object
<CustomObject>
    <fields>
        <fullName>ActualEffort__c</fullName>
        <label>Actual Effort</label>
        <summarizedField>Time_Entry__c.Effort__c</summarizedField>
        <summaryFilterItems>
            <field>Time_Entry__c.Client_Recoverable__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Time_Entry__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Actual_End_Date__c</fullName>
        <label>Actual End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Revenue__c</fullName>
        <label>Actual Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Start_Date__c</fullName>
        <label>Actual Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Billing_Cycle__c</fullName>
        <label>Billing Cycle</label>
        <picklist>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fortnightly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Half-yearly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annually</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Billing_Type__c</fullName>
        <formula>TEXT(Sales_Order__r.Billing_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Codes__c</fullName>
        <formula>Sales_Order__r.Customer__r.Customer_Codes__c +&quot;/&quot;+ Projectid__c</formula>
        <label>Project Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <formula>Sales_Order__r.Customer__r.Name</formula>
        <label>Customer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Developers__c</fullName>
        <label>Developers</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Industry_Vertical__c</fullName>
        <formula>TEXT(Sales_Order__r.Customer__r.Industry_Vertical__c)</formula>
        <label>Industry Vertical</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integration_with_Other_Packages__c</fullName>
        <label>Integration with Other Packages</label>
        <picklist>
            <picklistValues>
                <fullName>Oracle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Xero</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAASU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tally</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Planned_Effort__c</fullName>
        <formula>Sales_Order__r.Estimated_Effort__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Planned Effort</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Planned_End_Date__c</fullName>
        <formula>Sales_Order__r.End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Planned End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Planned_Revenue__c</fullName>
        <formula>Sales_Order__r.Estimated_Revenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Planned Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Planned_Start_Date__c</fullName>
        <formula>Sales_Order__r.Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Planned Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Allocation_Count__c</fullName>
        <label>Project Allocation Count</label>
        <summaryForeignKey>Allocation__c.Project__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Project_Category__c</fullName>
        <label>Project Category</label>
        <picklist>
            <picklistValues>
                <fullName>Implementation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enhancement      </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Code__c</fullName>
        <label>Project Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Type__c</fullName>
        <label>Project Type</label>
        <picklist>
            <picklistValues>
                <fullName>Internal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Recoverable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Projectid__c</fullName>
        <displayFormat>{0000}</displayFormat>
        <label>Projectid</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Sales_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Order</label>
        <referenceTo>Sales_Order__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Salesforce_Solutions__c</fullName>
        <label>Salesforce Solutions</label>
        <picklist>
            <picklistValues>
                <fullName>Sales Cloud</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Cloud</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing Cloud</fullName>
            </picklistValues>
            <picklistValues>
                <fullName> Platform</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hiroku</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Touch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Desk.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Work.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In-Progress</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X3rd_Party_Apps__c</fullName>
        <label>3rd Party Apps</label>
        <picklist>
            <picklistValues>
                <fullName>Conga</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Appirio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>iHance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <label>Project</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Sales_Order__c</columns>
        <columns>Project_Lead__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Open_Australia_Projects</fullName>
        <columns>NAME</columns>
        <columns>Project_Lead__c</columns>
        <columns>Planned_Start_Date__c</columns>
        <columns>Planned_End_Date__c</columns>
        <columns>Planned_Effort__c</columns>
        <columns>Billing_Type__c</columns>
        <columns>Planned_Revenue__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Customer__c</field>
            <operation>contains</operation>
            <value>Extentor Australia</value>
        </filters>
        <label>All Open Australia Projects</label>
    </listViews>
    <listViews>
        <fullName>All_Open_Projects</fullName>
        <columns>NAME</columns>
        <columns>Customer__c</columns>
        <columns>Billing_Type__c</columns>
        <columns>Project_Category__c</columns>
        <columns>Project_Lead__c</columns>
        <columns>Project_Type__c</columns>
        <columns>Status__c</columns>
        <columns>Planned_Effort__c</columns>
        <columns>ActualEffort__c</columns>
        <columns>Planned_Revenue__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open,In-Progress</value>
        </filters>
        <label>All Open Projects</label>
    </listViews>
    <listViews>
        <fullName>Projects_All</fullName>
        <columns>NAME</columns>
        <columns>Project_Code__c</columns>
        <columns>Project_Type__c</columns>
        <columns>Project_Category__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>Projects-All</label>
    </listViews>
    <listViews>
        <fullName>Projects_LaunchPads</fullName>
        <columns>NAME</columns>
        <columns>Planned_Start_Date__c</columns>
        <columns>Planned_End_Date__c</columns>
        <columns>Planned_Effort__c</columns>
        <columns>Actual_Start_Date__c</columns>
        <columns>Actual_End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project_Category__c</field>
            <operation>equals</operation>
            <value>CB-LAUNCHPAD</value>
        </filters>
        <label>Projects - LaunchPads</label>
    </listViews>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <namedFilters>
        <fullName>nf_01I90000000j8ZSEAY_00N90000004ddhjEAA</fullName>
        <active>true</active>
        <field>Time_Entry__c.Project__c</field>
        <filterItems>
            <field>Project__c.Status__c</field>
            <operation>equals</operation>
            <value>In-Progress</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Time Entry_Project</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01I90000001FLcnEAG_00N90000007vbzqEAA</fullName>
        <active>true</active>
        <field>Claim_Items__c.Project__c</field>
        <filterItems>
            <field>Project__c.Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Claim Items_Project</name>
    </namedFilters>
    <pluralLabel>Projects</pluralLabel>
    <recordTypes>
        <fullName>Default</fullName>
        <active>true</active>
        <label>Default</label>
    </recordTypes>
    <recordTypes>
        <fullName>Read_Only</fullName>
        <active>true</active>
        <label>Read Only</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>No_end_date_without_start_date</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISBLANK( Actual_Start_Date__c ) , NOT( ISBLANK( Actual_End_Date__c ) ) )</errorConditionFormula>
        <errorDisplayField>Actual_Start_Date__c</errorDisplayField>
        <errorMessage>Actual Start Date must be set before setting Actual End Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Project_Status_Change_Without_EndDate</fullName>
        <active>true</active>
        <description>When project status is completed and actual end date is blank</description>
        <errorConditionFormula>(ISPICKVAL(Status__c  , &quot;Completed&quot;) || ISPICKVAL(Status__c  , &quot;Closed&quot;)) &amp;&amp;  ISBLANK(Actual_End_Date__c)</errorConditionFormula>
        <errorDisplayField>Actual_End_Date__c</errorDisplayField>
        <errorMessage>You must enter end date of the project</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validation_on_dates</fullName>
        <active>true</active>
        <description>&apos;Actual Start date&apos; should be less than the &apos; Actual End Date&apos;</description>
        <errorConditionFormula>Actual_Start_Date__c &gt; Actual_End_Date__c</errorConditionFormula>
        <errorDisplayField>Actual_End_Date__c</errorDisplayField>
        <errorMessage>&apos;Actual Start date&apos; should be less than the &apos; Actual End Date&apos;</errorMessage>
    </validationRules>
</CustomObject>